# bft

./: AGENTS.md  Cargo.toml  README.md  bash-fzf-tab-completion.bash  flake.nix
.github/workflows/: ci.yml  release.yml
.sisyphus/plans/: implementation-plan.md
docs/: DEBUG.md  DEBUG_USAGE.md
scripts/: bft.bash
src/: main.rs
src/bash/: history.rs  mod.rs
src/completion/: AGENTS.md  carapace.rs  mod.rs
src/config/: mod.rs
src/fzf/: mod.rs
src/parser/: AGENTS.md  mod.rs
src/quoting/: AGENTS.md  mod.rs
src/selector/: AGENTS.md  dialoguer.rs  mod.rs  theme.rs
