[package]
name = "bft"
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
description = "Fast, interactive fuzzy tab completion for Bash"
license = "MIT"
repository = "https://github.com/J0HN50N133/bft"
keywords = ["bash", "fzf", "completion", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
brush-parser = "0.3"
shlex = "1.3"
thiserror = "2.0"
anyhow = "1.0"
shellexpand = "3.1"
nix = "0.30"
glob = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
ctrlc = "3.5"
fuzzy-matcher = "0.3.7"
env_logger = "0.11.8"
json5 = "1.3.0"

[dev-dependencies]
tempfile = "3"
